--- a/css/style.css
+++ b/css/style.css
@@ -147,8 +147,7 @@ a {
 }
 
 .hotel-search__input {
-  color: #000000;
-  font-size: 14px;
+  font: inherit;
   font-weight: 700;
   text-transform: uppercase;
 
@@ -164,11 +163,21 @@ a {
   background-color: #ffffff;
 }
 
-.hotel-search__input::placeholder {
-  font-size: 14px;
-  font-weight: 700;
-  color:#000000;
-  text-transform: uppercase;
+::-moz-placeholder {
+  opacity: 1;
+}
+
+.hotel-search__input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: #000000;
+}
+.hotel-search__input::-moz-placeholder { /* Firefox 19+ */
+  color: #000000;
+}
+.hotel-search__input:-ms-input-placeholder { /* IE 10+ */
+  color: #000000;
+}
+.hotel-search__input:-moz-placeholder { /* Firefox 18- */
+  color: #000000;
 }
 
 .hotel-search__button-search {
