--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,14 @@ html {
 body {
   margin: 0;
   padding: 0;
+
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
-  color: #000000;
   text-transform: uppercase;
+
+  color: #000000;
   background-color: #f2f1ef;
 }
 
@@ -22,56 +24,68 @@ a {
   text-decoration: none;
 }
 
-.visually-hidden {
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
   position: absolute;
+
   width: 1px;
   height: 1px;
   margin: -1px;
   border: 0;
   padding: 0;
+
   white-space: nowrap;
+
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
 
 .wrapper {
-  outline: 1px solid #008000;
   width: 1200px;
-  background-color: #ffffff;
   margin: 0 auto;
+
+  background-color: #ffffff;
   box-shadow: 0px 5px 15px 0px rgba(0, 1, 1, 0.2);
 }
 
 /* Стили Header */
 .header {
   position: relative;
+
+  padding-right: 72px;
+  padding-left: 72px;
 }
 
 .header__logo {
   position: absolute;
   top: 0;
-  left: 44.6%;
-}
-
-.navigation-header {
-  line-height: 26px;
+  left: 529px;
 }
 
 .navigation-header__list {
   display: flex;
   align-items: center;
-  list-style: none;
+
   margin: 0;
   padding:0;
-  outline: 1px solid blue;
+
+  list-style: none;
 }
 
 .navigation-header__item {
-  flex-basis: 239px;
-  text-align: center;
-  min-height: 56px;
-  outline: 1px solid red;
+  width: 240px;
+  padding-top: 14px;
+  padding-bottom: 16px;
+}
+
+.navigation-header__item--left {
+  text-align: left;
+}
+
+.navigation-header__item--right {
+  text-align: right;
 }
 
 .navigation-header__item:nth-child(3) {
@@ -79,8 +93,10 @@ a {
 }
 
 .navigation-header__link {
-  color: #000000;
+  line-height: 26px;
   font-weight: 700;
+  color: #000000;
+
 }
 
 .navigation-header__link:hover,
@@ -98,15 +114,38 @@ a {
 
 /* Стили index.html */
 
+.welcome-banner {
+  margin-bottom: 60px;
+
+  height: 509px;
+
+  background-image:
+    url("../img/intro-mask.svg"),
+    url("../img/intro-welcome.svg"),
+    url("../img/mountain.jpg");
+
+  background-position:
+    left 0 bottom -2px,
+    center 75px,
+    0 -56px;
+
+  background-size:
+    1200px 60px,
+    459px 353px,
+    1200px 773px;
+
+  background-repeat: no-repeat;
+}
+
 .main__title {
+  width: 440px;
+  margin: 0 auto;
+  margin-bottom: 26px;
+
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
   text-align: center;
-}
-
-.features {
-  background-color: #81b3d2;
 }
 
 .features__list {
@@ -118,32 +157,52 @@ a {
 }
 
 .features__item {
-  flex-basis: 1150px;
+  flex-basis: 400px;
   flex-grow: 1;
-  outline: 1px solid red;
+
+  padding-top: 50px;
 }
 
 .features__wrapper {
-  display: inline-block;
-  outline: 1px solid yellow;
+  position: relative;
+
+  width: 400px;
 }
 
-/* .features__item:nth-child(1),
+.features__wrapper--right {
+  margin-left: auto;
+}
+
+.features__item:nth-child(1) {
+  background-image: url("../img/feature-1.jpg");
+  background-position: top 0 right 0;
+  background-size: 800px 256px;
+  background-repeat: no-repeat;
+}
+
 .features__item:nth-child(2) {
-  margin-right: auto;
-} */
+  background-image: url("../img/feature-2.jpg");
+  background-position: top 0 left 0;
+  background-size: 800px 256px;
+  background-repeat: no-repeat;
+}
+
+.features__item:nth-child(1),
+.features__item:nth-child(2) {
+  flex-basis: 100%;
+
+  background-color: #81b3d2;
+}
 
 .features__item:nth-child(2) {
   text-align: right;
 }
 
-.features__item:nth-child(3),
-.features__item:nth-child(4),
-.features__item:nth-child(5) {
-  flex-basis: 140px;
-}
-
 .features__title {
+  margin: 0;
+  margin-bottom: 50px;
+  padding: 0;
+
   font-size: 14px;
   line-height: 26px;
   color: #333333;
@@ -151,9 +210,33 @@ a {
 }
 
 .features-item__title {
+  margin: 0;
+  margin-bottom: 20px;
+  padding: 0;
+
   font-size: 21px;
   font-weight: 700;
   text-align: center;
+}
+
+.features-item__item-number {
+  margin: 0;
+  margin-bottom: 25px;
+  padding: 0;
+}
+
+.features-item__item-number:before {
+  content: "— ";
+}
+
+.features-item__item-number:after {
+  content: " —";
+}
+
+.features-item__description {
+  margin: 0;
+  margin-bottom: 57px;
+  padding: 0;
 }
 
 .features-item__item-number,
@@ -170,20 +253,79 @@ a {
 
 .city-attractions {
   display: flex;
-  flex-grow: 1;
-  list-style: none;
+
   margin: 0;
   padding: 0;
+
+  list-style: none;
   color: #000000;
+
+  background-color: #ffffff;
+}
+
+.city-attractions__item {
+  position: relative;
+
+  flex-basis: 400px;
+  padding-top: 160px;
+}
+
+.city-attractions__item .city-attractions__title::before {
+  content: "";
+
+  position: absolute;
+
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.city-attractions__item:nth-child(1) .city-attractions__title:before {
+  top: 60px;
+  left: 160px;
+
+  width: 75px;
+  height: 72px;
+
+  background-image: url("../img/icon-1.svg");
+}
+
+.city-attractions__item:nth-child(2) .city-attractions__title:before {
+  top: 60px;
+  left: 160px;
+
+  width: 74px;
+  height: 70px;
+
+  background-image: url("../img/icon-3.svg");
+}
+
+.city-attractions__item:nth-child(3) .city-attractions__title:before {
+  top: 55px;
+  left: 170px;
+
+  width: 64px;
+  height: 76px;
+
+  background-image: url("../img/icon-2.svg");
+}
+
+.city-attractions__title,
+.city-attractions__description {
+  margin: 0;
+  padding: 0;
 }
 
 .city-attractions__title {
+  margin-bottom: 25px;
+
   font-size: 21px;
   font-weight: 700;
   text-align: center;
 }
 
 .city-attractions__description {
+  margin-bottom: 80px;
+
   color: #333333;
   text-align: center;
 }
@@ -192,12 +334,22 @@ a {
   display:flex;
   flex-direction: column;
   align-items: center;
-  width: 400px;
-  outline: 1px solid red;
+
+  width: 435px;
   margin: 0 auto;
+  margin-bottom: 45px;
+  padding-top: 50px;
+}
+
+.hotel-search__question,
+.hotel-search__description {
+  margin: 0;
+  padding: 0;
 }
 
 .hotel-search__question {
+  margin-bottom: 25px;
+
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
@@ -212,7 +364,9 @@ a {
 .hotel-search__wrapper-form {
   display: flex;
   flex-direction: column;
-  width: 570px;
+
+  position: relative;
+  width: 568px;
   margin: 0 auto;
 }
 
@@ -230,6 +384,11 @@ a {
 }
 
 .hotel-search__button-popup {
+  display: block;
+
+  width: 568px;
+  min-height: 86px;
+
   background-color: #766357;
 }
 
@@ -244,8 +403,25 @@ a {
 }
 
 .hotel-search__popup-form {
+  position: absolute;
+  top: 86px;
+
   display: flex;
   flex-direction: column;
+
+  width: 568px;
+  padding-left: 55px;
+  padding-top: 55px;
+  padding-right: 53px;
+  padding-bottom: 55px;
+  background-color: #ffffff;
+  box-shadow: 0px 7px 15px 0 rgba(0, 1, 1, 0.15);
+}
+
+.hotel-search__field {
+  position: relative;
+
+  padding-bottom: 29px;
 }
 
 .hotel-search__field-name {
@@ -253,7 +429,37 @@ a {
   font-weight: 700;
 }
 
+.hotel-search__wrapper-label .hotel-search__field {
+  padding-bottom:0;
+}
+
+.hotel-search__field-name--arrival-date{
+  margin-right: 19px;
+}
+
+.hotel-search__field-name--departure-date {
+  margin-right: 16px;
+}
+
+.hotel-search__field-name--adults,
+.hotel-search__field-name--children {
+  align-self: center;
+}
+
+.hotel-search__field-name--adults {
+  margin-right: 41px;
+}
+
+.hotel-search__field-name--children {
+  margin-right: 26px;
+}
+
 .hotel-search__input {
+  padding-left: 12px;
+  padding-right: 12px;
+
+  height: 38px;
+
   font: inherit;
   font-weight: 700;
   text-transform: uppercase;
@@ -267,7 +473,19 @@ a {
 }
 
 .hotel-search__input:focus {
+  border: solid 2px #e5e5e5;
   background-color: #ffffff;
+  outline: none;
+}
+
+.hotel-search__input--date {
+  width: 346px;
+}
+
+.hotel-search__input--people-number {
+  width: 38px;
+
+  text-align: left;
 }
 
 ::-moz-placeholder {
@@ -287,7 +505,109 @@ a {
   color: #000000;
 }
 
+.hotel-search__icon-date {
+  position: absolute;
+  top: 8px;
+  right: 3px;
+  border: 0;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.hotel-search__icon-date path {
+  fill: #cacaca;
+}
+
+.hotel-search__icon-date:hover path,
+.hotel-search__icon-date:focus path {
+  fill: #000000;
+}
+
+.hotel-search__icon-date:focus {
+  outline: none;
+}
+
+.hotel-search__icon-date:active path {
+  fill: #81b3d2;
+}
+
+.hotel-search__icon-date:active {
+  outline: none;
+}
+
+.hotel-search__wrapper-label {
+  display: flex;
+
+  margin-bottom: 30px;
+}
+
+.hotel-search__wrapper-label .hotel-search__field {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.hotel-search__wrapper-label .hotel-search__field:nth-child(1) {
+  margin-right: 53px;
+}
+
+.hotel-search__icon-minus,
+.hotel-search__icon-plus {
+  position: relative;
+
+  width: 38px;
+  height: 38px;
+
+  background-color: #f2f2f2;
+  border: 1px solid #f2f2f2;
+}
+
+.hotel-search__icon-minus::before,
+.hotel-search__icon-plus::before,
+.hotel-search__icon-plus::after {
+  content: "";
+
+  position: absolute;
+  top: 19px;
+  left: 13px;
+
+  width: 11px;
+  height: 3px;
+
+  background-color: #a9a9a9;
+
+}
+
+.hotel-search__icon-plus::after {
+ transform: rotate(90deg);
+}
+
+.hotel-search__icon-minus:hover::before,
+.hotel-search__icon-minus:focus::before,
+.hotel-search__icon-plus:hover::before,
+.hotel-search__icon-plus:focus::before,
+.hotel-search__icon-plus:hover::after,
+.hotel-search__icon-plus:focus::after {
+  background-color: #000000;
+}
+
+.hotel-search__icon-minus:active::before,
+.hotel-search__icon-plus:active::before,
+.hotel-search__icon-plus:active:after {
+  background-color: #81b3d2;
+}
+
+.hotel-search__icon-minus:focus,
+.hotel-search__icon-plus:hover {
+  outline: none;
+}
+
 .hotel-search__button-search {
+  display: block;
+
+  width: 458px;
+  min-height: 58px;
+  margin-top: 26px;
+
   background-color: #81b3d2;
 }
 
@@ -301,20 +621,57 @@ a {
   background-color: #5496bd;
 }
 
-.map__image {
-  background-color: #f2f1ef;
+.map {
+  height: 590px;
+  background-image: url("../img/map.jpg");
+  background-position: 50% 0;
+  background-repeat: no-repeat;
+  background-size: 1200px 593px;
 }
 
-/* Стили hotels.html */
+
+
+/* --------- Стили hotels.html ---------- */
+
+.hotel-search-inner {
+  padding-left: 71px;
+  padding-top: 26px;
+  padding-right: 71px;
+  padding-bottom: 31px;
+
+  background-image: url("../img/filter_inner_background.jpg");
+  background-repeat: no-repeat;
+  background-size: 1200px 562px;
+}
 
 .form-inner {
   display: flex;
-  background-color: #5496bd;
-  outline: 2px solid blue;
+
+  margin: 0;
+  padding: 0;
+}
+
+.form-inner__form-group {
+  margin: 0;
+  padding: 0;
+
+  border: 0;
+}
+
+.form-inner__form-group:nth-child(1) {
+  margin-right: 118px;
 }
 
 .form-inner__form-group:nth-child(2) {
   margin-right: auto;
+}
+
+.form-inner__form-group:nth-child(3) {
+  width: 319px;
+}
+
+.form-inner__form-group:nth-child(3) .form-inner__form-title {
+  margin-bottom: 10px;
 }
 
 .form-inner__list,
@@ -326,13 +683,28 @@ a {
   padding: 0;
 }
 
+.form-inner__list {
+  margin-left: 40px;
+}
+
+.form-inner__item {
+  margin-bottom: 25px;
+}
+
+.form-inner__item:last-child {
+  margin-bottom: 0;
+}
+
 .form-inner__form-title {
+  margin-bottom: 26px;
   font-size: 16px;
   font-weight: 700;
   color: #ffffff;
 }
 
 .form-inner__label {
+  position: relative;
+
   color: #ffffff;
 }
 
@@ -346,6 +718,75 @@ a {
   color: #ffffff;
   text-align: center;
 }
+
+.form-inner__input--checkbox + .form-inner__label:before {
+  content: "";
+
+  position: absolute;
+  top: -2px;
+  left: -39px;
+
+  width: 23px;
+  height: 23px;
+  background-image: url("../img/checkbox-off.svg");
+  background-size: 23px 23px;
+  background-repeat: no-repeat;
+}
+
+.form-inner__input--checkbox:checked + .form-inner__label:before {
+  width: 27px;
+  background-image: url("../img/checkbox-on.svg");
+  background-size: 27px 23px;
+}
+
+.form-inner__price-fields {
+  position: relative;
+
+  height: 36px;
+  margin-bottom: 20px;
+
+  border: 2px solid #ffffff;
+  border-radius: 2px;
+}
+
+.form-inner__price-fields::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  width: 2px;
+  height: 22px;
+
+  background: #ffffff;
+
+  transform: translate(-50%, -50%);
+}
+
+.form-inner__form-group:nth-child(3) .form-inner__label {
+  display: inline-block;
+
+  width: 90px;
+  padding-left: 65px;
+
+  line-height: 38px;
+  vertical-align: top;
+
+  cursor: pointer;
+}
+
+.form-inner__input--text {
+  width: 50px;
+  margin: 0;
+
+  color: inherit;
+  font: inherit;
+
+  background: none;
+  border: none;
+}
+
+
 
 .form-inner__button-show {
   font: inherit;
@@ -366,7 +807,30 @@ a {
 
 .sorting {
   display: flex;
+
+  padding-top: 31px;
+  padding-bottom: 30px;
+  padding-right: 63px;
+  padding-left: 71px;
+
   align-items: center;
+
+
+  border-bottom: 1px solid #f6f6f6;
+}
+
+.sorting__text,
+.sorting__title {
+  margin: 0;
+  padding: 0;
+}
+
+.sorting__text {
+  margin-right: 48px;
+}
+
+.sorting__title {
+  margin-right: 39px;
 }
 
 .sorting__list,
@@ -376,6 +840,14 @@ a {
 
 .sorting__list {
   margin-right: auto;
+}
+
+.sorting__item {
+  margin-right: 33px;
+}
+
+.sorting__item:last-child {
+  margin-right: 0;
 }
 
 .sorting__text,
@@ -418,18 +890,84 @@ a {
   color: #81b3d2;
 }
 
+.sorting__direction-item {
+  margin-right: 11px;
+}
+
+.sorting__direction-link {
+  display: inline-block;
+  width: 0;
+  height: 0;
+}
+
+.sorting__direction-link--down {
+  border-top: 10px solid #cacaca;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+}
+
+.sorting__direction-link--down:hover,
+.sorting__direction-link--down:focus {
+  border-top: 10px solid #231f20;
+}
+
+.sorting__direction-link--down:active {
+  border-top: 10px solid #81b3d2;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+}
+
+.sorting__direction-link--up {
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 10px solid #cacaca;
+}
+
+.sorting__direction-link--up:hover,
+.sorting__direction-link--up:focus {
+  border-bottom: 10px solid #231f20;
+}
+
+.sorting__direction-link--up:active {
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 10px solid #81b3d2;
+}
+
+.sorting__direction-link--current {
+  border-top: 10px solid #81b3d2;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+}
+
+.catalog {
+  padding-top: 24px;
+  padding-right: 73px;
+  padding-bottom: 88px;
+  padding-left: 72px;
+}
+
 .catalog__item {
   display: flex;
-  outline: 2px solid orange;
+
+  margin-bottom: 23px;
+  padding-bottom: 32px;
+
+
+  border-bottom: 1px solid #f6f6f6;
 }
 
 .catalog__image {
+  margin-top: 5px;
+  margin-right: 30px;
+
   background-color: #5496bd;
 }
 
 .catalog__title {
   margin: 0;
   padding: 0;
+  margin-bottom: 7px;
 }
 
 .catalog__title-link {
@@ -447,20 +985,44 @@ a {
 
 .catalog__container {
   display: flex;
+  margin-bottom: 15px;
 }
 
-.catalog__type-hotel,
+.catalog__accommodation,
 .catalog__cost {
+  margin: 0;
+  padding: 0;
   color: #333333;
 }
 
+.catalog__accommodation--hotel {
+  margin-right: 38px;
+}
+
+.catalog__accommodation--motel {
+  margin-right: 64px;
+}
+
+.catalog__accommodation--apartments {
+  margin-right: 21px;
+}
+
 .catalog__button {
+  display: inline-block;
+
+  margin-right: 2px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  vertical-align: middle;
+
   color: #ffffff;
   font-weight: 700;
   text-align: center;
 }
 
 .catalog__button--more-details {
+  width: 110px;
+
   background-color: #81b3d2;
 }
 
@@ -475,6 +1037,8 @@ a {
 }
 
 .catalog__button--booking {
+  width: 142px;
+
   background-color: #766357;
 }
 
@@ -496,61 +1060,155 @@ a {
   background-color: #81b3d2;
 }
 
+.catalog__stars-list {
+  display: flex;
+  justify-content: flex-end;
+
+  margin-bottom: 46px;
+  padding-top: 5px;
+
+  list-style: none;
+}
+
+.catalog__stars-item {
+  position: relative;
+
+  width: 18px;
+  height: 17px;
+  margin-left: 5px;
+}
+
+.catalog__stars-item:before {
+  content: "";
+
+  position: absolute;
+
+  width: 18px;
+  height: 17px;
+  background-image: url("../img/star.svg");
+  background-size: 18px 17px;
+
+}
+
 .catalog__raiting-numbers {
+  display: block;
+
+  width: 110px;
+  height: 27px;
+  margin: 0;
+  margin-left: auto;
+  padding: 0;
+  padding-top: 3px;
+  background-color: #f2f2f2;
+
   color: #666666;
   text-align: center;
-  background-color: #f2f2f2;
 }
 
 /* Стили Footer */
 
 .footer {
   display: flex;
-  outline: 1px solid blue;
+  align-items: start;
+
+  margin-top: -115px;
+
+  background-color: #ffffff;
+  opacity: 0.9;
 }
 
 .footer__hashtag {
-  outline: 1px solid red;
-  margin-right: auto;
+  display: block;
+
+  width: 400px;
+  padding-top: 45px;
+  padding-bottom: 48px;
   font-size: 21px;
   font-weight: 700;
   line-height: 26px;
+  text-align: center;
   color: #000000;
 }
 
 .footer__socials-list {
   display: flex;
-  outline: 1px solid red;
-  list-style: none;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  width: 400px;
   margin: 0;
   padding: 0;
+  padding-top: 35px;
+  padding-bottom: 31px;
+
+  list-style: none;
+}
+
+.footer__socials-item {
+  margin-right: 5px;
+  margin-bottom: 5px;
 }
 
 .footer__socials-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+
+  width: 46px;
+  height: 48px;
   background-color: #81b3d2;
 }
 
 .footer__socials-link:hover,
 .footer__socials-link:focus {
-  background-color: #669ec0;;
+  background-color: #669ec0;
 }
 
 .footer__socials-link:active {
-  background-color: #5496bd;;;
+  background-color: #5496bd;
+}
+
+.footer__socials-link:active path {
+  opacity: 0.3;
 }
 
 .footer__wrapper-developer {
-  outline: 1px solid red;
-  margin-left: auto;
+  width: 400px;
+  padding-top: 33px;
+  padding-bottom: 34px;
+
+  text-align: center;
 }
 
 .footer__developer-name {
   display: inline-block;
-  line-height: 26px;
+
+  margin: 0;
+  padding: 0;
+  margin-right: 4px;
   vertical-align: middle;
+
+  line-height: 26px;
+
+}
+
+.footer__developer-link path  {
+  fill: #231f20;
+}
+
+.footer__developer-link:hover path,
+.footer__developer-link:focus path {
+  fill: #81b3d2;
+}
+
+.footer__developer-link:active path  {
+  fill: #bdbbbc;
 }
 
 .footer__logo {
   display: inline-block;
+
+  margin-top: 5px;
   vertical-align: middle;
 }
