--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ input[type="radio"].visually-hidden {
   flex-basis: 400px;
   flex-grow: 1;
 
-  padding-top: 50px;
+  padding-top: 47px;
 }
 
 .features__wrapper {
@@ -206,7 +206,7 @@ input[type="radio"].visually-hidden {
 
 .features__title {
   margin: 0;
-  margin-bottom: 50px;
+  margin-bottom: 51px;
   padding: 0;
 
   font-size: 14px;
@@ -217,7 +217,7 @@ input[type="radio"].visually-hidden {
 
 .features-item__title {
   margin: 0;
-  margin-bottom: 20px;
+  margin-bottom: 24px;
   padding: 0;
 
   font-size: 21px;
@@ -227,7 +227,7 @@ input[type="radio"].visually-hidden {
 
 .features-item__item-number {
   margin: 0;
-  margin-bottom: 25px;
+  margin-bottom: 21px;
   padding: 0;
 }
 
@@ -241,7 +241,7 @@ input[type="radio"].visually-hidden {
 
 .features-item__description {
   margin: 0;
-  margin-bottom: 56px;
+  margin-bottom: 59px;
   padding: 0;
 }
 
@@ -274,7 +274,7 @@ input[type="radio"].visually-hidden {
   position: relative;
 
   flex-basis: 400px;
-  padding-top: 160px;
+  padding-top: 161px;
 }
 
 .city-attractions__title::before {
@@ -288,7 +288,7 @@ input[type="radio"].visually-hidden {
 
 .city-attractions__title--accommodation:before {
   top: 60px;
-  left: 160px;
+  left: 162px;
 
   width: 75px;
   height: 72px;
@@ -298,7 +298,7 @@ input[type="radio"].visually-hidden {
 
 .city-attractions__title--food:before {
   top: 60px;
-  left: 160px;
+  left: 162px;
 
   width: 74px;
   height: 70px;
@@ -308,7 +308,7 @@ input[type="radio"].visually-hidden {
 
 .city-attractions__title--souvenirs:before {
   top: 55px;
-  left: 170px;
+  left: 168px;
 
   width: 64px;
   height: 76px;
@@ -331,7 +331,7 @@ input[type="radio"].visually-hidden {
 }
 
 .city-attractions__description {
-  margin-bottom: 80px;
+  margin-bottom: 81px;
 
   color: #333333;
   text-align: center;
@@ -344,7 +344,7 @@ input[type="radio"].visually-hidden {
 
   width: 435px;
   margin: 0 auto;
-  margin-bottom: 48px;
+  margin-bottom: 47px;
   padding-top: 50px;
 }
 
@@ -355,7 +355,7 @@ input[type="radio"].visually-hidden {
 }
 
 .hotel-search__question {
-  margin-bottom: 25px;
+  margin-bottom: 24px;
 
   font-size: 30px;
   line-height: 36px;
@@ -369,11 +369,8 @@ input[type="radio"].visually-hidden {
 }
 
 .hotel-search__wrapper-form {
-  display: flex;
-  flex-direction: column;
-
   position: relative;
-  width: 568px;
+  width: 600px;
   margin: 0 auto;
 }
 
@@ -395,6 +392,7 @@ input[type="radio"].visually-hidden {
 
   width: 568px;
   min-height: 86px;
+  margin: 0 auto;
 
   background-color: #766357;
 }
@@ -409,11 +407,22 @@ input[type="radio"].visually-hidden {
   background-color: #503e33;
 }
 
-.hotel-search__popup-form {
+.wrapper-mask {
   position: absolute;
   top: 86px;
 
-  display: flex;
+  width: 600px;
+  min-height: 415px;
+
+  overflow: hidden;
+}
+
+.hotel-search__popup-form {
+  position: absolute;
+  top: 87px;
+  left: 16px;
+
+  display: none;
   flex-direction: column;
 
   width: 568px;
@@ -423,6 +432,38 @@ input[type="radio"].visually-hidden {
   padding-bottom: 55px;
   background-color: #ffffff;
   box-shadow: 0px 7px 15px 0 rgba(0, 1, 1, 0.15);
+}
+
+.hotel-search__popup-form--show {
+  top: -386px;
+
+  display: -webkit-box;
+
+  display: -ms-flexbox;
+
+  display: flex;
+
+  -webkit-animation-name: move-popup;
+
+          animation-name: move-popup;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes move-popup {
+  to {
+    -webkit-transform: translateY(386px);
+            transform: translateY(386px);
+  }
+}
+
+@keyframes move-popup {
+  to {
+    -webkit-transform: translateY(386px);
+            transform: translateY(386px);
+  }
 }
 
 .hotel-search__wrapper-field {
@@ -473,7 +514,8 @@ input[type="radio"].visually-hidden {
 }
 
 .hotel-search__input:hover {
-  background-color: #f2f2f2;
+  background-color: #ebebeb;
+  border: 2px solid #ebebeb;
 }
 
 .hotel-search__input:focus {
@@ -596,7 +638,7 @@ input[type="radio"].visually-hidden {
 
   width: 458px;
   min-height: 58px;
-  margin-top: 24px;
+  margin-top: 23px;
 
   background-color: #81b3d2;
 }
@@ -633,6 +675,7 @@ input[type="radio"].visually-hidden {
   background-repeat: no-repeat;
   background-size: 1200px 562px;
   background-color: #283739;
+  background-position: 0px -55px;
 }
 
 .form-inner {
@@ -650,7 +693,7 @@ input[type="radio"].visually-hidden {
 }
 
 .form-inner__form-group--infrastructure {
-  margin-right: 118px;
+  margin-right: 120px;
 }
 
 .form-inner__form-group--type-housing {
@@ -662,7 +705,8 @@ input[type="radio"].visually-hidden {
 }
 
 .form-inner__form-group--cost-day .form-inner__form-title {
-  margin-bottom: 10px;
+  margin-bottom: 11px;
+  margin-left: 2px;
 }
 
 .form-inner__list,
@@ -792,12 +836,13 @@ input[type="radio"].visually-hidden {
 
 .form-inner__range {
   position: relative;
+
+  margin-bottom: 32px;
 }
 
 .form-inner__range-bar {
 
   height: 2px;
-  margin-bottom: 34px;
 
   background: rgba(255, 255, 255, 0.3);
 }
@@ -841,7 +886,7 @@ input[type="radio"].visually-hidden {
 }
 
 .form-inner__range-grip--max {
-  left: 80%;
+  left: 79%;
 }
 
 .form-inner__range-grip:hover,
@@ -1024,7 +1069,7 @@ input[type="radio"].visually-hidden {
 .catalog {
   padding-top: 24px;
   padding-right: 73px;
-  padding-bottom: 88px;
+  padding-bottom: 89px;
   padding-left: 72px;
 }
 
@@ -1200,6 +1245,7 @@ input[type="radio"].visually-hidden {
   margin-left: auto;
   padding: 0;
   padding-top: 3px;
+  padding-left: 4px;
   background-color: #f2f2f2;
 
   color: #666666;
@@ -1212,7 +1258,7 @@ input[type="radio"].visually-hidden {
   display: flex;
   align-items: start;
 
-  margin-top: -115px;
+  margin-top: -117px;
 
   background-color: #ffffff;
   opacity: 0.9;
@@ -1241,15 +1287,19 @@ input[type="radio"].visually-hidden {
   width: 400px;
   margin: 0;
   padding: 0;
-  padding-top: 35px;
+  padding-top: 36px;
   padding-bottom: 31px;
 
   list-style: none;
 }
 
 .footer__socials-item {
-  margin-right: 5px;
+  margin-right: 6px;
   margin-bottom: 5px;
+}
+
+.footer__socials-item:last-child {
+  margin-right: 0;
 }
 
 .footer__socials-link {
@@ -1292,7 +1342,7 @@ input[type="radio"].visually-hidden {
 
   margin: 0;
   padding: 0;
-  margin-right: 10px;
+  margin-right: 8px;
   vertical-align: middle;
 
   line-height: 26px;
