--- a/css/style.css
+++ b/css/style.css
@@ -270,7 +270,6 @@ input[type="radio"].visually-hidden {
   margin-bottom: 59px;
   margin-left: auto;
   padding: 0;
-  outline: 1px solid red;
 }
 
 .features-item__item-number,
@@ -508,6 +507,13 @@ input[type="radio"].visually-hidden {
           animation-fill-mode: forwards;
 }
 
+.hotel-search__popup-form--error {
+  top: 0;
+
+  animation-name: shake;
+  animation-duration: 0.6s;
+}
+
 @-webkit-keyframes move-popup {
   to {
     -webkit-transform: translateY(386px);
@@ -519,6 +525,55 @@ input[type="radio"].visually-hidden {
   to {
     -webkit-transform: translateY(386px);
             transform: translateY(386px);
+  }
+}
+
+@-webkit-keyframes shake {
+  0%,
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    -webkit-transform: translateX(-10px);
+            transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    -webkit-transform: translateX(10px);
+            transform: translateX(10px);
+  }
+}
+@keyframes shake {
+  0%,
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    -webkit-transform: translateX(-10px);
+            transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    -webkit-transform: translateX(10px);
+            transform: translateX(10px);
   }
 }
 
